--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -4836,3 +4836,8 @@ msgstr "zapnout notifikace"
 #: app/html/user/register.html:20
 msgid "Don't have an invite?"
 msgstr "Nemáš pozvánku?"
+
+#: app/templates/messages/messages.html:2 app/templates/messages/saved.html:2
+#: app/templates/messages/sent.html:2
+msgid "My messages"
+msgstr "Mé zprávy"
