--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -4841,3 +4841,33 @@ msgstr "Nemáš pozvánku?"
 #: app/templates/messages/sent.html:2
 msgid "My messages"
 msgstr "Mé zprávy"
+
+#: app/html/shared/sidebar/user.html:18
+msgid "Shadowban user"
+msgstr "Shadowbanovat uživatele"
+
+#: app/html/shared/sidebar/user.html:23
+msgid "Un-shadowban user"
+msgstr "Odshadowbanovat uživatele"
+
+#: app/html/site/log.html:34
+#, python-format
+msgid "Shadowbanned <a href=\"/u/%(user)s\">%(user)s</a>"
+msgstr "Shadowbanoval(a) <a href=\"/u/%(user)s\">%(user)s</a>"
+
+#: app/html/site/log.html:36
+#, python-format
+msgid "Un-shadowbanned <a href=\"/u/%(user)s\">%(user)s</a>"
+msgstr "Odshadowbanoval(a) <a href=\"/u/%(user)s\">%(user)s</a>"
+
+#: app/static/js/main.js:547
+msgid "Are you sure you want to shadow-ban this user?"
+msgstr "Opravdu chceš shadowbanovat tohoto uživatele?"
+
+#: app/static/js/main.js:552
+msgid "Are you sure you want to un-shadowban this user?"
+msgstr "Opravdu chceš odshadowbanovat tohoto uživatele?"
+
+#: app/views/do.py:4004
+msgid "User is not shadowbanned"
+msgstr "Uživatel není shadowbanován(a)"
