--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -4872,3 +4872,22 @@ msgstr "Opravdu chceš odshadowbanovat tohoto uživatele?"
 #: app/views/do.py:4004
 msgid "User is not shadowbanned"
 msgstr "Uživatel není shadowbanován(a)"
+
+#: app/misc.py:597
+#, python-format
+msgid "[a comment](%(url)s)"
+msgstr "[komentář](%(url)s)"
+
+#: app/views/do.py:3155
+#, python-format
+msgid ""
+"The site administrators deleted %(commentlink)s you made on the post "
+"%(postlink)s. Reason: %(reason)s"
+msgstr "Administrator vymazal(a) tvůj %(commentlink)s k příspěvku %(postlink)s. Důvod: %(reason)s"
+
+#: app/views/do.py:3164
+#, python-format
+msgid ""
+"The moderators of %(sublink)s deleted %(commentlink)s you made on the "
+"post %(postlink)s. Reason: %(reason)s"
+msgstr "Moderátor skupiny %(sublink)s vymazal(a) tvůj %(commentlink)s k příspěvku %(postlink)s. Důvod: %(reason)s"
