--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -4876,3 +4876,22 @@ msgstr "Naozaj chceš odshadowbanovať tohoto používateľa?"
 #: app/views/do.py:4004
 msgid "User is not shadowbanned"
 msgstr "Používateľ nie je shadowbanovaný(á)"
+
+#: app/misc.py:597
+#, python-format
+msgid "[a comment](%(url)s)"
+msgstr "[komentár](%(url)s)"
+
+#: app/views/do.py:3155
+#, python-format
+msgid ""
+"The site administrators deleted %(commentlink)s you made on the post "
+"%(postlink)s. Reason: %(reason)s"
+msgstr "Administrátor vymazal(a) tvoj %(commentlink)s k príspevku %(postlink)s. Dôvod: %(reason)s"
+
+#: app/views/do.py:3164
+#, python-format
+msgid ""
+"The moderators of %(sublink)s deleted %(commentlink)s you made on the "
+"post %(postlink)s. Reason: %(reason)s"
+msgstr "Moderátor skupiny %(sublink)s vymazal(a) tvoj %(commentlink)s k príspevku %(postlink)s. Dôvod: %(reason)s"
