--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -3050,12 +3050,12 @@ msgstr "příspěvků"
 msgid "comments"
 msgstr "komentářů"
 
-#: app/html/user/profile.html:64
-msgid "Phuks given"
+#: app/html/user/profile.html:63
+msgid "karma given"
 msgstr "rozdaná karma"
 
-#: app/html/user/profile.html:68
-msgid "Total score"
+#: app/html/user/profile.html:67
+msgid "karma received"
 msgstr "vlastní karma"
 
 #: app/html/user/profile.html:71
