--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -4529,11 +4529,11 @@ msgstr "Nemáš žiadne uploady."
 
 #: app/templates/usercomments.html:21
 msgid "Please log in to see this user's comments."
-msgstr "Komentáre používateľa vidia iba prihlásení používatelia."
+msgstr "Na túto stránku majú prístup iba prihlásení používatelia."
 
 #: app/templates/userposts.html:20
 msgid "Please log in to see this user's posts."
-msgstr "Príspevky používateľa vidia iba prihlásení používatelia."
+msgstr "Na túto stránku majú prístup iba prihlásení používatelia."
 
 #: app/templates/usercomments.html:32
 msgid "This user has not commented on anything, yet."
