--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -1775,7 +1775,7 @@ msgstr "Záznamy"
 
 #: app/html/shared/sidebar/messages.html:5
 msgid "Inbox"
-msgstr "Inbox"
+msgstr "Přijaté zprávy"
 
 #: app/html/shared/sidebar/messages.html:13
 #: app/html/user/messages/notifications.html:11
