--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -892,8 +892,8 @@ msgid "There are no posts here, yet."
 msgstr "Zatím zde nejsou žádné příspěvky."
 
 #: app/html/index.html:62 app/html/user/posts.html:37
-msgid "No posts were found."
-msgstr "Nenašli se žádné příspěvky."
+msgid "No posts were found for the search term"
+msgstr "Nenašli se žádné příspěvky které mají v názvu"
 
 #: app/html/admin/reports.html:60 app/html/admin/wiki.html:48
 #: app/html/index.html:60 app/html/mod/closed.html:65
