Proper support for live recent activity

--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -1774,10 +1774,25 @@ msgstr "komentár: %(text)s"
 msgid "commented:"
 msgstr "komentár:"
 
+#: app/html/shared/sidebar/home.html:45
+msgid "live updates"
+msgstr "update v reálnom čase"
+
 #: app/html/shared/sidebar/home.html:52
 #, python-format
 msgid "%(user)s posted: %(text)s"
 msgstr "%(user)s pridal(a) príspevok: %(text)s"
+
+#: app/static/js/Socket.js:223
+#, python-format
+msgid "%1 posted:<br>%2<br>%3 in %4"
+msgstr "%1 pridal(a) príspevok:<br>%2<br>%3 v %4"
+
+#: app/static/js/Socket.js:198
+#, python-format
+msgid "%1 commented:<br>%2<br>%3 in %4"
+msgstr "%1 pridal(a) komentár:<br>%2<br>%3 v %4"
+
 
 #: app/html/shared/sidebar/home.html:52
 #, python-format
