--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -1774,10 +1774,24 @@ msgstr "komentář: %(text)s"
 msgid "commented:"
 msgstr "komentář:"
 
+#: app/html/shared/sidebar/home.html:45
+msgid "live updates"
+msgstr "update v reálném čase"
+
 #: app/html/shared/sidebar/home.html:52
 #, python-format
 msgid "%(user)s posted: %(text)s"
 msgstr "%(user)s přidal(a) příspěvek: %(text)s"
+
+#: app/static/js/Socket.js:223
+#, python-format
+msgid "%1 posted:<br>%2<br>%3 in %4"
+msgstr "%1 přidal(a) příspěvek:<br>%2<br>%3 v %4"
+
+#: app/static/js/Socket.js:198
+#, python-format
+msgid "%1 commented:<br>%2<br>%3 in %4"
+msgstr "%1 přidal(a) komentář:<br>%2<br>%3 v %4"
 
 #: app/html/shared/sidebar/home.html:52
 #, python-format
