--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -605,6 +605,18 @@ msgstr "Povoliť upload príspevky"
 msgid "Enable polls"
 msgstr "Povoliť ankety"
 
+#: app/forms/sub.py:176
+msgid "Show comment score only after"
+msgstr "Skóre komentárov zobraziť až po"
+
+#: app/forms/sub.py:179
+msgid "That number isn't in the right range (0 to 1440)"
+msgstr "Číslo musí byť v rozsahu 0 až 1440"
+
+#: app/html/sub/postcomments.html:64
+msgid "[score hidden]"
+msgstr "[skóre skryté]"
+
 #: app/forms/sub.py:132
 msgid "Default sub page post sorting"
 msgstr "Defaultné radenie príspevkov"
@@ -1111,6 +1123,10 @@ msgstr "Slug"
 #: app/html/sub/bans.html:118 app/html/user/settings/invitecode.html:24
 msgid "Created"
 msgstr "Vydaný"
+
+#: app/html/user/comments.html:75 app/html/user/savedcomments.html:72
+msgid "points"
+msgstr "bodov"
 
 #: app/html/admin/wiki.html:26
 msgid "Last edited"
@@ -3451,24 +3467,44 @@ msgstr "Jeden z tvojich príspevkov v skupine <a href=\"%(sublink)s\">%(sub)s</a
 msgid "<a href=\"/u/%(user)s\">%(user)s</a> un-deleted one of your posts in <a href=\"%(sublink)s\">%(sub)s</a>"
 msgstr "<a href=\"/u/%(user)s\">%(user)s</a> obnovil(a) tvoj príspevok v <a href=\"%(sublink)s\">%(sub)s</a>"
 
+#: app/html/user/messages/notifications.html:89
+#, python-format
+msgid "Your comment. Posted %(timeago)s. [score hidden]"
+msgstr "Tvoj komentár. Zaslaný %(timeago)s. [skóre skryté]"
+
+#: app/html/user/messages/notifications.html:95
+#, python-format
+msgid "Comment. Posted %(timeago)s. [score hidden]"
+msgstr "Komentár. Zaslaný %(timeago)s. [skóre skryté]"
+
+#: app/html/user/messages/notifications.html:110
+#, python-format
+msgid "Posted %(timeago)s. [score hidden] (read %(timeagoread)s)"
+msgstr "Pridané %(timeago)s. [skóre skryté] (prečítané %(timeagoread)s)"
+
+#: app/html/user/messages/notifications.html:116
+#, python-format
+msgid "Posted %(timeago)s. [score hidden]"
+msgstr "Pridané %(timeago)s. [skóre skryté]"
+
 #: app/html/user/messages/notifications.html:86
 #, python-format
-msgid "Your comment. Posted %(timeago)s. <b class='cscore'>%(score)i</b> points."
+msgid "Your comment. Posted %(timeago)s. <b class='cscore'>%(score)i</b> points"
 msgstr "Tvoj komentár. Zaslaný %(timeago)s. Skóre: <b class='cscore'>%(score)i</b>"
 
 #: app/html/user/messages/notifications.html:89
 #, python-format
-msgid "Comment. Posted %(timeago)s. <b class='cscore'>%(score)i</b> points."
+msgid "Comment. Posted %(timeago)s. <b class='cscore'>%(score)i</b> points"
 msgstr "Komentár. Zaslaný %(timeago)s. Skóre: <b class='cscore'>%(score)i</b>"
 
 #: app/html/user/messages/notifications.html:96
 #, python-format
-msgid "Posted %(timeago)s. <b>%(score)s</b> points. Read %(timeagoread)s"
-msgstr "Pridané %(timeago)s. Skóre: <b>%(score)s</b> . Prečítané %(timeagoread)s"
+msgid "Posted %(timeago)s. <b>%(score)s</b> points (read %(timeagoread)s)"
+msgstr "Pridané %(timeago)s. Skóre: <b>%(score)s</b> (prečítané %(timeagoread)s)"
 
 #: app/html/user/messages/notifications.html:98
 #, python-format
-msgid "Posted %(timeago)s. <b>%(score)s</b> points."
+msgid "Posted %(timeago)s. <b>%(score)s</b> points"
 msgstr "Pridané %(timeago)s. Skóre: <b>%(score)s</b> ."
 
 #: app/html/user/messages/notifications.html:107
