--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -1112,7 +1112,7 @@ msgid "TOTP setup"
 msgstr "TOTP nastavenie"
 
 #: app/html/admin/wiki.html:15
-msgid "Site wiki"
+msgid "Site wikis"
 msgstr "Wiki stránky"
 
 #: app/html/admin/wiki.html:23
